--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title></title>
+        <title>Archiduchesse</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -13,9 +13,55 @@
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="css/bootstrap.css">
+
+<script src="https://use.fontawesome.com/88840399dd.js"></script>
+
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
     </head>
     <body>
+      <header>
+        <a href="#" class="hidden-md-down"><img src="img/logo/index.svg" alt=""></a>
+        <nav class="navpc hidden-md-down">
+          <ul>
+            <li><a href="">Shop</a></li>
+            <li><a href="">Blog</a></li>
+            <li><a href="">Info</a></li>
+            <li><a href="">Contact</a></li>
+          </ul>
+        </nav>
+        <div class="hidden-md-down">
+          <select>
+            <option value="">FR</option>
+            <option value="">EN</option>
+            <option value="">US</option>
+          </select>
+          <p>Bienvenue,<a href="#">connexion</a></p>
+          <p><span>0</span> produit <a href="#">dans mon panier</a></p>
+          <p>Frais de port offerts dans 42 €</p>
+          <div class="">
+
+
+          </div>
+
+        </div>
+        <nav class="navphone hidden-lg-up">
+          <ul>
+            <li><a href="#"><img src="img/logo/menu.svg" alt=""></a></li>
+            <li><a href="#"><img src="img/logo/index.svg" alt=""></a></li>
+            <li><a href="#"><img src="img/logo/panier.svg" alt=""></a></li>
+          </ul>
+        </nav>
+        <nav class="navchaussette hidden-md-down">
+          <ul>
+            <li><a href=""><img src="img/nav-bas/bouclette.svg" alt=""><p>Bouclette <br><span>Douces & chaudes</span></p></a></li>
+            <li><a href=""><img src="img/nav-bas/collants.svg" alt=""><p>Bouclette <br><span>Douces & chaudes</span></p></a></li>
+            <li><a href=""><img src="img/nav-bas/deluxe.svg" alt=""><p>Bouclette <br><span>Douces & chaudes</span></p></a></li>
+            <li><a href=""><img src="img/nav-bas/deville.svg" alt=""><p>Bouclette <br><span>Douces & chaudes</span></p></a></li>
+            <li><a href=""><img src="img/nav-bas/fantaisie.svg" alt=""><p>Bouclette <br><span>Douces & chaudes</span></p></a></li>
+            <li><a href=""><img src="img/nav-bas/soquettes.svg" alt=""><p>Bouclette <br><span>Douces & chaudes</span></p></a></li>
+          </ul>
+        </nav>
+      </header>
 
 
         <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
