--- a/index.html
+++ b/index.html
@@ -62,6 +62,176 @@
           </ul>
         </nav>
       </header>
+      <main>
+        <figure>
+          <h4>6.00 €</h4>
+          <a href="#">
+            <img src="img/chaussettes/bleu-de-nimes.jpg" alt="chaussette">
+            <figcaption>Courte - bleu de Nimes</figcaption>
+          </a>
+          <ul>
+            <li>31 <hr>35</li>
+            <li>36 <hr>41</li>
+          </ul>
+        </figure>
+        <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+  <div class="carousel-inner" role="listbox">
+    <div class="carousel-item active">
+      <img class="d-block img-fluid" src="img/carousel/16.jpg" alt="First slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block img-fluid" src="img/carousel/16.jpg" alt="Second slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block img-fluid" src="img/carousel/16.jpg" alt="Third slide">
+    </div>
+  </div>
+</div>
+        <figure>
+          <h4>6.00 €</h4>
+          <a href="#">
+            <img src="img/chaussettes/bleu-gitanes.jpg" alt="chaussette">
+            <figcaption>Courte - bleu gitane</figcaption>
+          </a>
+          <ul>
+            <li>31 <hr>35</li>
+            <li>36 <hr>41</li>
+          </ul>
+        </figure>
+        <figure>
+          <h4>6.00 €</h4>
+          <a href="#">
+            <img src="img/chaussettes/bleu-petit-garcon.jpg" alt="chaussette">
+            <figcaption>Courte - bleu canard</figcaption>
+          </a>
+          <ul>
+            <li>31 <hr>35</li>
+            <li>36 <hr>41</li>
+          </ul>
+        </figure>
+        <figure>
+          <h4>6.00 €</h4>
+          <a href="#">
+            <img src="img/chaussettes/bleu-tout-sauf-marine.jpg" alt="chaussette">
+            <figcaption>Courte - bleu marine</figcaption>
+          </a>
+          <ul>
+            <li>31 <hr>35</li>
+            <li>36 <hr>41</li>
+          </ul>
+        </figure>
+        <figure>
+          <h4>6.00 €</h4>
+          <a href="#">
+            <img src="img/chaussettes/bleu-turquoise.jpg" alt="chaussette">
+            <figcaption>Courte - bleu turquoise</figcaption>
+          </a>
+          <ul>
+            <li>31 <hr>35</li>
+            <li>36 <hr>41</li>
+          </ul>
+        </figure>
+        <figure>
+          <h4>6.00 €</h4>
+          <a href="#">
+            <img src="img/chaussettes/chaussettes-rose-framboise.jpg" alt="chaussette">
+            <figcaption>Courte - rose framboise</figcaption>
+          </a>
+          <ul>
+            <li>31 <hr>35</li>
+            <li>36 <hr>41</li>
+          </ul>
+        </figure>
+        <figure>
+          <h4>6.00 €</h4>
+          <a href="#">
+            <img src="img/chaussettes/chaussettes-violet-violine.jpg" alt="chaussette">
+            <figcaption>Courte - violet violines</figcaption>
+          </a>
+          <ul>
+            <li>31 <hr>35</li>
+            <li>36 <hr>41</li>
+          </ul>
+        </figure>
+        <figure>
+          <h4>6.00 €</h4>
+          <a href="#">
+            <img src="img/chaussettes/gris-anthracite.jpg" alt="chaussette">
+            <figcaption>Courte - gris anthracite</figcaption>
+          </a>
+          <ul>
+            <li>31 <hr>35</li>
+            <li>36 <hr>41</li>
+          </ul>
+        </figure>
+        <figure>
+          <h4>6.00 €</h4>
+          <a href="#">
+            <img src="img/chaussettes/gris-cons-de-pigeon.jpg" alt="chaussette">
+            <figcaption>Courte - gris pigeon</figcaption>
+          </a>
+          <ul>
+            <li>31 <hr>35</li>
+            <li>36 <hr>41</li>
+          </ul>
+        </figure>
+        <figure>
+          <h4>6.00 €</h4>
+          <a href="#">
+            <img src="img/chaussettes/gris-cumulus.jpg" alt="chaussette">
+            <figcaption>Courte - gris cumulus</figcaption>
+          </a>
+          <ul>
+            <li>31 <hr>35</li>
+            <li>36 <hr>41</li>
+          </ul>
+        </figure>
+        <figure>
+          <h4>6.00 €</h4>
+          <a href="#">
+            <img src="img/chaussettes/juste-mauve.jpg" alt="chaussette">
+            <figcaption>Courte - juste mauve</figcaption>
+          </a>
+          <ul>
+            <li>31 <hr>35</li>
+            <li>36 <hr>41</li>
+          </ul>
+        </figure>
+        <figure>
+          <h4>6.00 €</h4>
+          <a href="#">
+            <img src="img/chaussettes/mauve-mure.jpg" alt="chaussette">
+            <figcaption>Courte - mauve-mure</figcaption>
+          </a>
+          <ul>
+            <li>31 <hr>35</li>
+            <li>36 <hr>41</li>
+          </ul>
+        </figure>
+        <figure>
+          <h4>6.00 €</h4>
+          <a href="#">
+            <img src="img/chaussettes/noir-reglisse.jpg" alt="chaussette">
+            <figcaption>Courte - noir reglise</figcaption>
+          </a>
+          <ul>
+            <li>31 <hr>35</li>
+            <li>36 <hr>41</li>
+          </ul>
+        </figure>
+        <figure>
+          <h4>6.00 €</h4>
+          <a href="#">
+            <img src="img/chaussettes/rose-petite-fille.jpg" alt="chaussette">
+            <figcaption>Courte - rose</figcaption>
+          </a>
+          <ul>
+            <li>31 <hr>35</li>
+            <li>36 <hr>41</li>
+          </ul>
+        </figure>
+
+      </main>
 
 
         <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
