index.html>make footer for pc, tablett and form

--- a/index.html
+++ b/index.html
@@ -62,7 +62,20 @@
           </ul>
         </nav>
       </header>
+
+
       <main>
+
+        <nav class="tailles">
+          <ul>
+            <li>Toutes</li>
+            <li>31/35</li>
+            <li>36/41</li>
+            <li>36/41</li>
+            <li>36/41</li>
+            <li>36/41</li>
+          </ul>
+        </nav>
         <figure>
           <h4>6.00 €</h4>
           <a href="#">
@@ -232,6 +245,19 @@
         </figure>
 
       </main>
+      <footer>
+        <ul>
+          <li><a href="#">Fabrication Francaise</a></li>
+          <li><a href="#">paiement sécurise</a></li>
+          <li><a href="#">Livraison 48h/72H</a></li>
+          <li><a href="#">38, Rue michelet,42 000 Saint etienne, 04.27.78.54.86 </a></li>
+          <li><a href="#">Facebook, <br>Plus de 20 000 pouces en l'air</a></li>
+          <li><a href="#">Twitter, <br>4410 Followers</a></li>
+        </ul>
+        <div><p>Webdesign et Développement par Axome - Motorisé sous Prestashop </p></div>
+        <div><p>Newsletter</p></div>
+        <div><a href="#">Nos passionnantes Conditions Générales de Vente</a></div>
+      </footer>
 
 
         <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
