index.html main.css > make style of header for phone

--- a/index.html
+++ b/index.html
@@ -44,13 +44,60 @@
           </div>
 
         </div>
-        <nav class="navphone hidden-lg-up">
+        <!-- <nav class="navphone hidden-lg-up">
           <ul>
             <li><a href="#"><img src="img/logo/menu.svg" alt=""></a></li>
             <li><a href="#"><img src="img/logo/index.svg" alt=""></a></li>
             <li><a href="#"><img src="img/logo/panier.svg" alt=""></a></li>
           </ul>
-        </nav>
+        </nav> -->
+        <nav class="navbar navbar-toggleable-md navbar-light bg-secondary hidden-lg-up d-flex flex-row justify-content-between align-items-center" id="navbas">
+  <button class="navbar-toggler navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <img src="img/logo/menu.svg" alt="hamburger">
+  </button>
+  <a href="#"><img src="img/logo/index.svg" alt="" class="logo"></a>
+  <a href="#"><img src="img/logo/panier.svg" alt=""class="panier"><span class="badge badge-pill badge-danger">0</span></a>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="#">De Ville <span class="sr-only">(current)</span></a>
+        <hr>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Deluxe</a>
+        <hr>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Deluxe</a>
+        <hr>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Bouclette</a>
+        <hr>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">fantaise</a>
+        <hr>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Socquettes</a>
+        <hr>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Collants</a>
+        <hr>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Courtes</a>
+        <hr>
+      </li>
+
+
+    </ul>
+
+  </div>
+</nav>
         <nav class="navchaussette hidden-md-down">
           <ul>
             <li><a href=""><img src="img/nav-bas/bouclette.svg" alt=""><p>Bouclette <br><span>Douces & chaudes</span></p></a></li>
