index.html main.css>phone>make style of main

--- a/index.html
+++ b/index.html
@@ -111,19 +111,40 @@
       </header>
 
 
-      <main>
+      <main class="home container-fluid">
+        <h1>Chaussettes de ville</h2>
 
-        <nav class="tailles">
-          <ul>
-            <li>Toutes</li>
-            <li>31/35</li>
-            <li>36/41</li>
-            <li>36/41</li>
-            <li>36/41</li>
-            <li>36/41</li>
+
+          <ul class="nav nav-pills taille">
+            <li class="nav-item">
+              <a class="nav-link active" href="#">31/36</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">31/36</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">31/36</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">31/36</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">31/36</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">31/36</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">31/36</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">31/36</a>
+            </li>
+
           </ul>
-        </nav>
-        <figure>
+          <div class="gallerie row">
+
+        <figure class="col-6">
           <h4>6.00 €</h4>
           <a href="#">
             <img src="img/chaussettes/bleu-de-nimes.jpg" alt="chaussette">
@@ -134,7 +155,7 @@
             <li>36 <hr>41</li>
           </ul>
         </figure>
-        <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+        <div id="carouselExampleSlidesOnly" class="carousel slide hidden-md-down" data-ride="carousel">
   <div class="carousel-inner" role="listbox">
     <div class="carousel-item active">
       <img class="d-block img-fluid" src="img/carousel/16.jpg" alt="First slide">
@@ -147,7 +168,10 @@
     </div>
   </div>
 </div>
-        <figure>
+
+
+
+        <figure class="col-6">
           <h4>6.00 €</h4>
           <a href="#">
             <img src="img/chaussettes/bleu-gitanes.jpg" alt="chaussette">
@@ -158,7 +182,7 @@
             <li>36 <hr>41</li>
           </ul>
         </figure>
-        <figure>
+        <figure class="col-6">
           <h4>6.00 €</h4>
           <a href="#">
             <img src="img/chaussettes/bleu-petit-garcon.jpg" alt="chaussette">
@@ -169,7 +193,7 @@
             <li>36 <hr>41</li>
           </ul>
         </figure>
-        <figure>
+        <figure class="col-6">
           <h4>6.00 €</h4>
           <a href="#">
             <img src="img/chaussettes/bleu-tout-sauf-marine.jpg" alt="chaussette">
@@ -180,7 +204,7 @@
             <li>36 <hr>41</li>
           </ul>
         </figure>
-        <figure>
+        <figure class="col-6">
           <h4>6.00 €</h4>
           <a href="#">
             <img src="img/chaussettes/bleu-turquoise.jpg" alt="chaussette">
@@ -191,7 +215,7 @@
             <li>36 <hr>41</li>
           </ul>
         </figure>
-        <figure>
+        <figure class="col-6">
           <h4>6.00 €</h4>
           <a href="#">
             <img src="img/chaussettes/chaussettes-rose-framboise.jpg" alt="chaussette">
@@ -202,7 +226,7 @@
             <li>36 <hr>41</li>
           </ul>
         </figure>
-        <figure>
+        <figure class="col-6">
           <h4>6.00 €</h4>
           <a href="#">
             <img src="img/chaussettes/chaussettes-violet-violine.jpg" alt="chaussette">
@@ -213,7 +237,7 @@
             <li>36 <hr>41</li>
           </ul>
         </figure>
-        <figure>
+        <figure class="col-6">
           <h4>6.00 €</h4>
           <a href="#">
             <img src="img/chaussettes/gris-anthracite.jpg" alt="chaussette">
@@ -224,7 +248,7 @@
             <li>36 <hr>41</li>
           </ul>
         </figure>
-        <figure>
+        <figure class="col-6">
           <h4>6.00 €</h4>
           <a href="#">
             <img src="img/chaussettes/gris-cons-de-pigeon.jpg" alt="chaussette">
@@ -235,7 +259,7 @@
             <li>36 <hr>41</li>
           </ul>
         </figure>
-        <figure>
+        <figure class="col-6">
           <h4>6.00 €</h4>
           <a href="#">
             <img src="img/chaussettes/gris-cumulus.jpg" alt="chaussette">
@@ -246,7 +270,7 @@
             <li>36 <hr>41</li>
           </ul>
         </figure>
-        <figure>
+        <figure class="col-6">
           <h4>6.00 €</h4>
           <a href="#">
             <img src="img/chaussettes/juste-mauve.jpg" alt="chaussette">
@@ -257,7 +281,7 @@
             <li>36 <hr>41</li>
           </ul>
         </figure>
-        <figure>
+        <figure class="col-6">
           <h4>6.00 €</h4>
           <a href="#">
             <img src="img/chaussettes/mauve-mure.jpg" alt="chaussette">
@@ -268,7 +292,7 @@
             <li>36 <hr>41</li>
           </ul>
         </figure>
-        <figure>
+        <figure class="col-6">
           <h4>6.00 €</h4>
           <a href="#">
             <img src="img/chaussettes/noir-reglisse.jpg" alt="chaussette">
@@ -279,7 +303,7 @@
             <li>36 <hr>41</li>
           </ul>
         </figure>
-        <figure>
+        <figure class="col-6">
           <h4>6.00 €</h4>
           <a href="#">
             <img src="img/chaussettes/rose-petite-fille.jpg" alt="chaussette">
@@ -290,6 +314,7 @@
             <li>36 <hr>41</li>
           </ul>
         </figure>
+        </div>
 
       </main>
       <footer>
