index.html main.css>phone> make style of #footli

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
           </ul>
           <div class="gallerie row">
 
-        <figure class="col-6">
+        <figure class="col-6 col-md-4">
           <h4>6.00 €</h4>
           <a href="#">
             <img src="img/chaussettes/bleu-de-nimes.jpg" alt="chaussette">
@@ -155,7 +155,7 @@
             <li>36 <hr>41</li>
           </ul>
         </figure>
-        <div id="carouselExampleSlidesOnly" class="carousel slide hidden-md-down" data-ride="carousel">
+        <div id="carouselExampleSlidesOnly" class="carousel slide hidden-sm-down col-md-8" data-ride="carousel">
   <div class="carousel-inner" role="listbox">
     <div class="carousel-item active">
       <img class="d-block img-fluid" src="img/carousel/16.jpg" alt="First slide">
@@ -171,7 +171,7 @@
 
 
 
-        <figure class="col-6">
+        <figure class="col-6 col-md-4">
           <h4>6.00 €</h4>
           <a href="#">
             <img src="img/chaussettes/bleu-gitanes.jpg" alt="chaussette">
@@ -182,7 +182,7 @@
             <li>36 <hr>41</li>
           </ul>
         </figure>
-        <figure class="col-6">
+        <figure class="col-6 col-md-4">
           <h4>6.00 €</h4>
           <a href="#">
             <img src="img/chaussettes/bleu-petit-garcon.jpg" alt="chaussette">
@@ -193,7 +193,7 @@
             <li>36 <hr>41</li>
           </ul>
         </figure>
-        <figure class="col-6">
+        <figure class="col-6 col-md-4">
           <h4>6.00 €</h4>
           <a href="#">
             <img src="img/chaussettes/bleu-tout-sauf-marine.jpg" alt="chaussette">
@@ -204,7 +204,7 @@
             <li>36 <hr>41</li>
           </ul>
         </figure>
-        <figure class="col-6">
+        <figure class="col-6 col-md-4">
           <h4>6.00 €</h4>
           <a href="#">
             <img src="img/chaussettes/bleu-turquoise.jpg" alt="chaussette">
@@ -215,7 +215,7 @@
             <li>36 <hr>41</li>
           </ul>
         </figure>
-        <figure class="col-6">
+        <figure class="col-6 col-md-4">
           <h4>6.00 €</h4>
           <a href="#">
             <img src="img/chaussettes/chaussettes-rose-framboise.jpg" alt="chaussette">
@@ -226,7 +226,7 @@
             <li>36 <hr>41</li>
           </ul>
         </figure>
-        <figure class="col-6">
+        <figure class="col-6 col-md-4">
           <h4>6.00 €</h4>
           <a href="#">
             <img src="img/chaussettes/chaussettes-violet-violine.jpg" alt="chaussette">
@@ -237,7 +237,7 @@
             <li>36 <hr>41</li>
           </ul>
         </figure>
-        <figure class="col-6">
+        <figure class="col-6 col-md-4">
           <h4>6.00 €</h4>
           <a href="#">
             <img src="img/chaussettes/gris-anthracite.jpg" alt="chaussette">
@@ -248,7 +248,7 @@
             <li>36 <hr>41</li>
           </ul>
         </figure>
-        <figure class="col-6">
+        <figure class="col-6 col-md-4">
           <h4>6.00 €</h4>
           <a href="#">
             <img src="img/chaussettes/gris-cons-de-pigeon.jpg" alt="chaussette">
@@ -259,7 +259,7 @@
             <li>36 <hr>41</li>
           </ul>
         </figure>
-        <figure class="col-6">
+        <figure class="col-6 col-md-4">
           <h4>6.00 €</h4>
           <a href="#">
             <img src="img/chaussettes/gris-cumulus.jpg" alt="chaussette">
@@ -270,7 +270,7 @@
             <li>36 <hr>41</li>
           </ul>
         </figure>
-        <figure class="col-6">
+        <figure class="col-6 col-md-4">
           <h4>6.00 €</h4>
           <a href="#">
             <img src="img/chaussettes/juste-mauve.jpg" alt="chaussette">
@@ -281,7 +281,7 @@
             <li>36 <hr>41</li>
           </ul>
         </figure>
-        <figure class="col-6">
+        <figure class="col-6 col-md-4">
           <h4>6.00 €</h4>
           <a href="#">
             <img src="img/chaussettes/mauve-mure.jpg" alt="chaussette">
@@ -292,7 +292,7 @@
             <li>36 <hr>41</li>
           </ul>
         </figure>
-        <figure class="col-6">
+        <figure class="col-6 col-md-4">
           <h4>6.00 €</h4>
           <a href="#">
             <img src="img/chaussettes/noir-reglisse.jpg" alt="chaussette">
@@ -303,7 +303,7 @@
             <li>36 <hr>41</li>
           </ul>
         </figure>
-        <figure class="col-6">
+        <figure class="col-6 col-md-4">
           <h4>6.00 €</h4>
           <a href="#">
             <img src="img/chaussettes/rose-petite-fille.jpg" alt="chaussette">
@@ -317,14 +317,14 @@
         </div>
 
       </main>
-      <footer>
-        <ul>
-          <li><a href="#">Fabrication Francaise</a></li>
-          <li><a href="#">paiement sécurise</a></li>
-          <li><a href="#">Livraison 48h/72H</a></li>
-          <li><a href="#">38, Rue michelet,42 000 Saint etienne, 04.27.78.54.86 </a></li>
-          <li><a href="#">Facebook, <br>Plus de 20 000 pouces en l'air</a></li>
-          <li><a href="#">Twitter, <br>4410 Followers</a></li>
+      <footer class="container">
+        <ul class="row" id="footli">
+          <li class="col-6 col-md-4"><a href="#"><div class="fab"></div>Fabrication  <br>Francaise</a></li>
+          <li class="col-6 col-md-"><a href="#"><div class="paiement"></div>paiement <br>sécurise</a></li>
+          <li class="col-6 col-md-"><a href="#"><div class="livraison"></div>Livraison <br>48h/72H</a></li>
+          <li class="col-6 col-md-"><a href="#"><div class="adresse"></div>38, Rue michelet, <br>42 000 Saint etienne, <br>04.27.78.54.86 </a></li>
+          <li class="hidden-sm-down col-md-"><div class="facebook"></div>Facebook, <br>Plus de 20 000 pouces en l'air</a></li>
+          <li class="hidden-sm-down col-md-"><a href="#"><div class="twitter"></div>Twitter, <br>4410 Followers</a></li>
         </ul>
         <div><p>Webdesign et Développement par Axome - Motorisé sous Prestashop </p></div>
         <div><p>Newsletter</p></div>
