index.html main.css>tablett> make style of footer

--- a/index.html
+++ b/index.html
@@ -317,21 +317,24 @@
         </div>
 
       </main>
-      <footer class="container d-flex flex-column">
+      <footer class="container ">
         <ul class="row" id="footli">
           <li class="col-6 col-md-4"><a href="#"><div class="fab"></div>Fabrication  <br>Francaise</a></li>
-          <li class="col-6 col-md-"><a href="#"><div class="paiement"></div>paiement <br>sécurise</a></li>
-          <li class="col-6 col-md-"><a href="#"><div class="livraison"></div>Livraison <br>48h/72H</a></li>
-          <li class="col-6 col-md-"><a href="#"><div class="adresse"></div>38, Rue michelet, <br>42 000 Saint etienne, <br>04.27.78.54.86 </a></li>
-          <li class="hidden-sm-down col-md-"><div class="facebook"></div>Facebook, <br>Plus de 20 000 pouces en l'air</a></li>
-          <li class="hidden-sm-down col-md-"><a href="#"><div class="twitter"></div>Twitter, <br>4410 Followers</a></li>
+          <li class="col-6 col-md-4"><a href="#"><div class="paiement"></div>paiement <br>sécurise</a></li>
+          <li class="col-6 col-md-4"><a href="#"><div class="livraison"></div>Livraison <br>48h/72H</a></li>
+          <li class="col-6 col-md-4"><a href="#"><div class="adresse"></div>38, Rue michelet, <br>42 000 Saint etienne, <br>04.27.78.54.86 </a></li>
+          <li class="hidden-sm-down col-md-4"> <a href="#"><div class="facebook"></div>Facebook, <br>Plus de 20 000 pouces en l'air</a></li>
+          <li class="hidden-sm-down col-md-4"><a href="#"><div class="twitter"></div>Twitter, <br>4410 Followers</a></li>
         </ul>
-        <div id="webdesign"><p>Webdesign et Développement par Axome - Motorisé sous Prestashop </p></div>
-        <div id="newsletter" class="d-flex flex-column justify-content-center"><p>Newsletter</p> <form class="form-inline my-2 my-lg-0 justify-content-center">
+        <div class="row">
+
+        <div id="webdesign" class="col-md-4"><p>Webdesign et Développement par Axome - Motorisé sous Prestashop </p></div>
+        <div id="newsletter" class="col-md-4 d-flex flex-column justify-content-center"><p>Newsletter</p> <form class="form-inline my-2 my-lg-0 justify-content-center">
       <input class="inputNew form-control" type="text" placeholder="Votre E-mail">
       <button class="button_mini btn btn-default" type="submit">OK</button>
     </form></div>
-        <div id="cgv"><a href="#">Nos passionnantes Conditions Générales de Vente</a></div>
+        <div id="cgv" class="col-md-4"><a href="#">Nos passionnantes Conditions Générales de Vente</a></div>
+      </div>
       </footer>
 
 
