--- a/index.html
+++ b/index.html
@@ -62,6 +62,12 @@
   <a href="#"><img src="img/logo/panier.svg" alt=""class="panier"><span class="badge badge-pill badge-danger">0</span></a>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="d-flex flex-row" id="navphonefirst">
+      <li><a href="#"><i class="fa fa-home" aria-hidden="true"></i></a></li>
+      <li><a href="#">Blog</a></li>
+      <li><a href="#">contact</a></li>
+
+    </ul>
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
         <a class="nav-link" href="#">De Ville <span class="sr-only">(current)</span></a>
