blog.html main.css>pc> make style of main

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
         <nav class="navpc hidden-md-down">
           <ul class="nav nav-pills">
             <li class="nav-item"><a class="nav-link active" href="">Shop</a></li>
-            <li class="nav-item"><a class="nav-link" href="">Blog</a></li>
+            <li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
             <li class="nav-item"><a class="nav-link" href="">Info</a></li>
-            <li class="nav-item"><a class="nav-link" href="">Contact</a></li>
+            <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
           </ul>
         </nav>
 
@@ -64,8 +64,8 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="d-flex flex-row" id="navphonefirst">
       <li><a href="#"><i class="fa fa-home" aria-hidden="true"></i></a></li>
-      <li><a href="#">Blog</a></li>
-      <li><a href="#">contact</a></li>
+      <li><a href="blog.html">Blog</a></li>
+      <li><a href="contact.html">contact</a></li>
 
     </ul>
     <ul class="navbar-nav mr-auto">
@@ -326,7 +326,7 @@
         </div>
 
       </main>
-      <footer class="container ">
+      <footer class="container-fluid ">
         <ul class="row" id="footli">
           <li class="col-6 col-md-4"><a href="#"><div class="fab"></div>Fabrication  <br>Francaise</a></li>
           <li class="col-6 col-md-4"><a href="#"><div class="paiement"></div>paiement <br>sécurise</a></li>
