make comments in html and css

--- a/contact.html
+++ b/contact.html
@@ -19,8 +19,14 @@
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
     </head>
     <body>
+
+      <!-- ***********************************Début header**************************************************************** -->
+
       <header class="d-lg-flex flex-lg-row flex-lg-wrap justify-content-lg-around align-items-lg-center" >
         <a href="#" class="hidden-md-down"><img src="img/logo/index.svg" alt=""></a>
+
+        <!-- ********************************nav pour pc******************************* -->
+
         <nav class="navpc hidden-md-down">
           <ul class="nav nav-pills">
             <li class="nav-item"><a class="nav-link active" href="index.html">Shop</a></li>
@@ -29,6 +35,8 @@
             <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
           </ul>
         </nav>
+
+        <!-- **************************************post-it******************************** -->
 
 
         <div class="hidden-md-down d-lg-flex flex-lg-row flex-lg-wrap justify-content-lg-between" id="papier-blog">
@@ -41,14 +49,9 @@
           </div>
 
         </div>
+        <!-- ************************************** fin post-it******************************** -->
+        <!-- ********************************nav hamburger pour phone et tablette************************* -->
 
-        <!-- <nav class="navphone hidden-lg-up">
-          <ul>
-            <li><a href="#"><img src="img/logo/menu.svg" alt=""></a></li>
-            <li><a href="#"><img src="img/logo/index.svg" alt=""></a></li>
-            <li><a href="#"><img src="img/logo/panier.svg" alt=""></a></li>
-          </ul>
-        </nav> -->
         <nav class="navbar navbar-toggleable-md navbar-light bg-secondary hidden-lg-up d-flex flex-row justify-content-between align-items-center" id="navbas">
   <button class="navbar-toggler navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <img src="img/logo/menu.svg" alt="hamburger">
@@ -101,7 +104,12 @@
     </ul>
 
   </div>
+
 </nav>
+
+<!-- ********************************fin nav hamburger pour phone et tablette************************* -->
+<!-- ********************************nav chausettes pour pc************************* -->
+
         <nav class="hidden-md-down " id="navchaussette">
           <ul class="nav nav-tabs d-lg-flex flex-lg-row justify-content-lg-between">
             <li class="nav-item"><a class="nav-link active" href=""><img src="img/nav-bas/bouclette.svg" alt=""><p>Bouclette <br><span>Douces & chaudes</span></p></a></li>
@@ -112,11 +120,20 @@
             <li class="nav-item"><a class="nav-link" href=""><img src="img/nav-bas/soquettes.svg" alt=""><p>Bouclette <br><span>Douces & chaudes</span></p></a></li>
           </ul>
         </nav>
+
+        <!-- ********************************fin nav chausettes pour pc************************* -->
+
       </header>
+      <!-- ************************************************fin du header******************************************** -->
+      <!-- ************************************************main******************************************** -->
 
       <main class="contact container">
+
+
         <h1>Contactez-nous</h1>
         <div class="row justify-content-around">
+
+          <!-- *************************Coordonnes*********************************** -->
 
         <section class="col-12 col-lg-5 card" id="coordonees">
           <h2>Coordonnées</h2>
@@ -127,6 +144,8 @@
 
 
         </section>
+
+        <!-- *****************************formulaire****************************** -->
         <form class="col-12 col-lg-5 card" action="index.html" method="post" id="formulaire">
           <h2>Votre message</h2>
           <fieldset class="form-group row">
@@ -165,7 +184,8 @@
 
 
 
-
+<!-- **************************************fin du main******************************** -->
+<!-- ************************************début du footer************************************** -->
 
 
       <footer class="container-fluid">
@@ -187,7 +207,7 @@
         <div id="cgv" class="col-md-4"><a href="#">Nos passionnantes Conditions Générales de Vente</a></div>
       </div>
       </footer>
-
+<!-- ****************************************fin du footer******************************************** -->
 
         <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
